@@ -1,36 +1,0 @@
-# Copyright 2018 Free Software Foundation, Inc.
-
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-# Check whether we can print an optimized-out vla.
-
-standard_testfile
-
-if { [prepare_for_testing "failed to prepare" $testfile "vla-optimized-out.c" \
-	  {debug optimize=-O3}] } {
-    return -1
-}
-
-proc vla_optimized_out { } {
-    if ![runto f1] {
-	fail "can't run to f1"
-	return
-    }
-
-    gdb_test "p a" \
-	{ = <optimized out>} \
-	"printed optimized out vla"
-}
-
-vla_optimized_out
