@@ -1,3 +1,10 @@
+2018-07-31  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gdb.base/vla-optimized-out-o3.exp: Delete.
+	* gdb.base/vla-optimized-out-o3-strict.exp: Delete.
+	* gdb.base/vla-optimized-out.exp: Extend to cover all of the
+	deleted tests.
+
 2018-07-30  Sergio Durigan Junior  <sergiodj@redhat.com>
 
 	* lib/gdbserver-support.exp (gdbserver_start): Match any kind of
